# mechatyper

./: Cargo.toml  LICENSE  README.md
examples/python/: circle_calculator.py
examples_backup/python/: circle_calculator.py
src/: code_cleaning.rs  instructions.rs  lang.rs  llm.rs  main.rs  prompts.rs  search.rs  utils.rs
src/old/: prompts.rs
