[package]
name = "mechatyper2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.2"
tree-sitter-rust = "0.20.3"
anyhow = "1.0.71"
rand = "0.8.5"
openai = "1.0.0-alpha.12"
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"
